Home.html and survey.html files

--- a/app/public/home.html
+++ b/app/public/home.html
@@ -29,7 +29,10 @@
                 meaning to you. </p>
             <hr class="my-4">
             <p> Fill out the personality based survey and we'll match a person that with the best overall match.</p> <hr>
-            <a class="btn btn-warning btn-lg" href="#" role="button">Start survey</a>
+            <div class="text-center">
+                <a href="/survey"><button class="btn btn-lg btn-warning">Start Survey</button></a>
+            </div>
+    
         </div>
     </div>
 
