fixed routes to all the links

--- a/app/public/home.html
+++ b/app/public/home.html
@@ -28,7 +28,7 @@
                 has most similar intersests just as you and become good friends or perhaps share a life that has some
                 meaning to you. </p>
             <hr class="my-4">
-            <p> Fill out the personality based survey and we'll match a person that with the best overall match.</p> <hr>
+            <p>Fill out the personality based survey and we'll match a person with the best overall match for you.</p> <hr>
             <div class="text-center">
                 <a href="/survey"><button class="btn btn-lg btn-warning">Start Survey</button></a>
             </div>
@@ -39,7 +39,8 @@
     <footer class="footer">
         <div class="container">
             <p>
-                <a href=""></a>
+                <a href="api/friends"><strong>Api Firend List</strong></a> <span>|</span>
+                <a href="https://github.com/anand92490/friend-finder"target="_blank"><strong>GitHub Repo</strong></a>
             </p>
         </div>
     </footer>
