--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -36,110 +36,110 @@
                     <label for="question1">I love to travel.</label>
                     <select class="form-control" id="question1">
                         <option value="empty"></option>
-                        <option value="1">1</option>
+                        <option value="1">1 (Strongly Agree)</option>
                         <option value="2">2</option>
                         <option value="3">3</option>
                         <option value="4">4</option>
-                        <option value="5">5</option>
+                        <option value="5">5 (Strongly Disagree)</option>
                     </select>
                 </div>
                 <div class="form-group">
                     <label for="question2">Money is not very important to me but living a meaningful life is.</label>
                     <select class="form-control" id="question2">
                         <option value="empty"></option>
-                        <option value="1">1</option>
+                        <option value="1">1 (Strongly Agree)</option>
                         <option value="2">2</option>
                         <option value="3">3</option>
                         <option value="4">4</option>
-                        <option value="5">5</option>
+                        <option value="5">5 (Strongly Disagree)</option>
                     </select>
                 </div>
                 <div class="form-group">
                     <label for="question3">I love to cook.</label>
                     <select class="form-control" id="question3">
                         <option value="empty"></option>
-                        <option value="1">1</option>
+                        <option value="1">1 (Strongly Agree)</option>
                         <option value="2">2</option>
                         <option value="3">3</option>
                         <option value="4">4</option>
-                        <option value="5">5</option>
+                        <option value="5">5 (Strongly Disagree)</option>
                     </select>
                 </div>
                 <div class="form-group">
                     <label for="question4">I'm very disciplined when it comes to tidiness, hygine and punctuality.</label>
                     <select class="form-control" id="question4">
                         <option value="empty"></option>
-                        <option value="1">1</option>
+                        <option value="1">1 (Strongly Agree)</option>
                         <option value="2">2</option>
                         <option value="3">3</option>
                         <option value="4">4</option>
-                        <option value="5">5</option>
+                        <option value="5">5 (Strongly Disagree)</option>
                     </select>
                 </div>
                 <div class="form-group">
                     <label for="question5">I take time to excercise or go to gym regularly.</label>
                     <select class="form-control" id="question5">
                         <option value="empty"></option>
-                        <option value="1">1</option>
+                        <option value="1">1 (Strongly Agree)</option>
                         <option value="2">2</option>
                         <option value="3">3</option>
                         <option value="4">4</option>
-                        <option value="5">5</option>
+                        <option value="5">5 (Strongly Disagree)</option>
                     </select>
                 </div>
                 <div class="form-group">
                     <label for="question6">Personality is more more important to me than appearence.</label>
                     <select class="form-control" id="question6">
                         <option value="empty"></option>
-                        <option value="1">1</option>
+                        <option value="1">1 (Strongly Agree)</option>
                         <option value="2">2</option>
                         <option value="3">3</option>
                         <option value="4">4</option>
-                        <option value="5">5</option>
+                        <option value="5">5 (Strongly Disagree)</option>
                     </select>
                 </div>
                 <div class="form-group">
                     <label for="question7">I'm good with my spending habits and managing money.</label>
                     <select class="form-control" id="question7">
                         <option value="empty"></option>
-                        <option value="1">1</option>
+                        <option value="1">1 (Strongly Agree)</option>
                         <option value="2">2</option>
                         <option value="3">3</option>
                         <option value="4">4</option>
-                        <option value="5">5</option>
+                        <option value="5">5 (Strongly Disagree)</option>
                     </select>
                 </div>
                 <div class="form-group">
                     <label for="question8">I'm a morning person.</label>
                     <select class="form-control" id="question8">
                         <option value="empty"></option>
-                        <option value="1">1</option>
+                        <option value="1">1 (Strongly Agree)</option>
                         <option value="2">2</option>
                         <option value="3">3</option>
                         <option value="4">4</option>
-                        <option value="5">5</option>
+                        <option value="5">5 (Strongly Disagree)</option>
                     </select>
                 </div>
                 <div class="form-group">
                     <label for="question9">I am very goal oriented and focuesd when it comes to career.</label>
                     <select class="form-control" id="question9">
                         <option value="empty"></option>
-                        <option value="1">1</option>
+                        <option value="1">1 (Strongly Agree)</option>
                         <option value="2">2</option>
                         <option value="3">3</option>
                         <option value="4">4</option>
-                        <option value="5">5</option>
+                        <option value="5">5 (Strongly Disagree)</option>
                     </select>
                 </div>
                 <div class="form-group">
                     <label for="question10">How likely are you willing to put others first before yourself?</label>
                     <select class="form-control" id="question10">
                         <option value="empty"></option>
-                        <option value="1">1</option>
+                        <option value="1">1 (Strongly Agree)</option>
                         <option value="2">2</option>
                         <option value="3">3</option>
                         <option value="4">4</option>
-                        <option value="5">5</option>
+                        <option value="5">5 (Strongly Disagree)</option>
                     </select>
                 </div>
             </form>
@@ -155,7 +155,8 @@
     <footer class="footer">
         <div class="container">
             <p>
-                <a href=""></a>
+                <a href="api/friends"><strong>Api Firend List</strong></a> <span>|</span>
+                <a href="https://github.com/anand92490/friend-finder"target="_blank"><strong>GitHub Repo</strong></a>
             </p>
         </div>
     </footer>
