--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -66,7 +66,8 @@
                     </select>
                 </div>
                 <div class="form-group">
-                    <label for="question4">I'm very disciplined when it comes to tidiness, hygine and punctuality.</label>
+                    <label for="question4">I'm very disciplined when it comes to tidiness, hygine and
+                        punctuality.</label>
                     <select class="form-control" id="question4">
                         <option value="empty"></option>
                         <option value="1">1 (Strongly Agree)</option>
@@ -156,11 +157,40 @@
         <div class="container">
             <p>
                 <a href="api/friends"><strong>Api Firend List</strong></a> <span>|</span>
-                <a href="https://github.com/anand92490/friend-finder"target="_blank"><strong>GitHub Repo</strong></a>
+                <a href="https://github.com/anand92490/friend-finder" target="_blank"><strong>GitHub Repo</strong></a>
             </p>
         </div>
     </footer>
+    <script src="https://ajax.googleapis.com/ajax/libs/d3js/5.9.7/d3.min.js"></script>
 
+    <script type="text/javascript">
+
+        //Event handler for submit button to gather user input 
+        $('#submitBtn').on('click', function (event) {
+            event.preventDefault();
+
+            let userInput = {
+                name: $("#name").val.trim(),
+                photo: $("#photo").val.trim(),
+                scores: [
+                    $("#question1").val.trim(),
+                    $("#question2").val.trim(),
+                    $("#question3").val.trim(),
+                    $("#question4").val.trim(),
+                    $("#question5").val.trim(),
+                    $("#question6").val.trim(),
+                    $("#question7").val.trim(),
+                    $("#question8").val.trim(),
+                    $("#question8").val.trim(),
+                    $("#question9").val.trim(),
+                    $("#question10").val.trim(),
+
+                ]
+            }
+
+        });
+
+    </script>
 </body>
 
 </html>
