--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -187,16 +187,15 @@
 
 <script type="text/javascript">
 
-
-window.onload = function() {
-    if (window.jQuery) {  
-        // jQuery is loaded  
-        console.log("Yeah!");
-    } else {
-        // jQuery is not loaded
-        console.log("Doesn't Work");
-    }
-}
+// window.onload = function() {
+//     if (window.jQuery) {  
+//         // jQuery is loaded  
+//         console.log("Yeah!");
+//     } else {
+//         // jQuery is not loaded
+//         console.log("Doesn't Work");
+//     }
+// }
 
 	$("#submitBtn").on("click", function(event) {
 		event.preventDefault();
