readme Updates + paragraph edits

--- a/app/public/home.html
+++ b/app/public/home.html
@@ -13,7 +13,7 @@
 <style>
     .jumbotron {
         background-color: #d7effcc9;
-        box-shadow:15px 15px 7px rgba(24, 96, 179, 0.466);
+        box-shadow: 15px 15px 7px rgba(24, 96, 179, 0.466);
     }
 </style>
 
@@ -23,17 +23,18 @@
             <h1 style="font-weight: bold; color: rgb(41, 48, 113); font-family: cursive " class="display-4 text-center">
                 ⚤ Friend Finder App ⚤</h1> <br>
             <p style="text-align: justify" class="lead">We understand that even though we have thousands of virtual
-                friends we have very firends.
-                Even worse no friends at all. You are not alone. Welcome to the social app that lets you find friends
-                who
-                has most similar intersests just as you and become good friends or perhaps share a life that has some
-                meaning to you. </p>
+                friends we have very few firends to interact with in reality. You are not alone! Welcome to the "Friend
+                Finder". An app that lets you find friends
+                who has most similar intrests just as you. Connect with your new match or perhaps share a meaningful
+                life that's a little more real.</p>
             <hr class="my-4">
-            <p>Fill out the personality based survey and we'll match a person with the best overall match for you.</p> <hr>
+            <p class="text-center">Start the survey and see for yourself if your match is indeed a possible ideal
+                companion for you.</p>
+            <hr>
             <div class="text-center">
                 <a href="/survey"><button class="btn btn-lg btn-warning">Start Survey</button></a>
             </div>
-    
+
         </div>
     </div>
 
@@ -41,7 +42,7 @@
         <div class="container">
             <p>
                 <a href="api/friends"><strong>Api Firend List</strong></a> <span>|</span>
-                <a href="https://github.com/anand92490/friend-finder"target="_blank"><strong>GitHub Repo</strong></a>
+                <a href="https://github.com/anand92490/friend-finder" target="_blank"><strong>GitHub Repo</strong></a>
             </p>
         </div>
     </footer>
