--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -22,7 +22,7 @@
         <div class="jumbotron">
             <h1 style="font-weight: bold; color: rgb(41, 48, 113); font-family: cursive " class="display-4 text-center">
                 ⚤ Start the Survey ⚤</h1> <br>
-            <p style="text-align: justify" class="lead">Complete the survey below to find the perfect match. Each answer
+            <p style="text-align: justify" class="lead">Complete the survey below to find your perfect match. Each answer
                 to the question can be rated on the scale of 1 to 5. Based on your response we will match the most viable candidate for you.</p>
             <hr class="my-4">
 		<form>
@@ -154,7 +154,7 @@
 				<div class="modal-content">
 					<div class="modal-header">
 						<button type="button" class="close" data-dismiss="modal">&times;</button>
-						<h3 class="modal-title">Your New Best Friend</h1>
+						<h3 class="modal-title">New Match found</h1>
 					</div>
 					<div class="modal-body">
 						<h2 id="bestFriend"></h2>
